Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,31 +1,28 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "5317220637:AAHhEXxWv-v4vov0P6sT56jwNxqm03AMFOA"                              # Require restart after changing it while bot running
+OWNER_ID = "779381484"                               # Require restart after changing it while bot running
+TELEGRAM_API = "16379641"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "ad61863206a7c6596b44a904afb8bd13"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
-GDRIVE_ID = ""
-IS_TEAM_DRIVE = ""
+GDRIVE_ID = "1VFjsr_WocVjEL53-0un0hTqaMlWKqVjG"
+IS_TEAM_DRIVE = "true"
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
-DOWNLOAD_STATUS_UPDATE_INTERVAL = "10"
+DOWNLOAD_STATUS_UPDATE_INTERVAL = "7"
 AUTO_DELETE_MESSAGE_DURATION = "30"
 DATABASE_URL = ""                           # Require restart after changing it while bot running
-AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
-SUDO_USERS = ""                             # Require restart after changing it while bot running
+AUTHORIZED_CHATS = "-1001560885902"                       # Require restart after changing it while bot running
+SUDO_USERS = "834143987"                             # Require restart after changing it while bot running
 IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
-STATUS_LIMIT = ""
-STOP_DUPLICATE = ""
+USE_SERVICE_ACCOUNTS = "true"
+INDEX_URL = "https://m.papaonwork.workers.dev/4:"
+STATUS_LIMIT = "5"
+STOP_DUPLICATE = "true"
 CMD_SUFFIX = ""                              # Require restart after changing it while bot running
 UPTOBOX_TOKEN = ""
-TORRENT_TIMEOUT = ""
+TORRENT_TIMEOUT = "600"
 EXTENSION_FILTER = ""
-INCOMPLETE_TASK_NOTIFIER = ""
+INCOMPLETE_TASK_NOTIFIER = "true"
 YT_DLP_QUALITY = ""
 
 # Update
@@ -37,12 +34,12 @@ USER_SESSION_STRING = ""                    # Require restart after changing it 
 LEECH_SPLIT_SIZE = ""
 AS_DOCUMENT = ""
 EQUAL_SPLITS = ""
-MEDIA_GROUP = ""
-DUMP_CHAT = ""
+MEDIA_GROUP = "-1001737511435"
+DUMP_CHAT = "-1001737511435"
 
 # qBittorrent/Aria2c
 BASE_URL = ""
-SERVER_PORT = ""
+SERVER_PORT = "8080"
 WEB_PINCODE = ""
 
 #Queueing system
@@ -57,12 +54,12 @@ RSS_CHAT_ID = ""
 RSS_USER_SESSION_STRING = ""                # Require restart after changing it while bot running
 
 # Mega
-MEGA_API_KEY = ""
+MEGA_API_KEY = "dMBFHB7S"
 MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
 
 # Buttons
-VIEW_LINK = ""
+VIEW_LINK = "true"
 
 # Torrent Search
 SEARCH_API_LINK = ""
@@ -85,26 +82,26 @@ SEARCH_PLUGINS = '["https://raw.githubusercontent.com/qbittorrent/search-plugins
                    "https://raw.githubusercontent.com/khensolomon/leyts/master/yts.py"]'
 
 #Limits
-STORAGE_THRESHOLD = ""
+STORAGE_THRESHOLD = "1"
 TORRENT_LIMIT = ""
 DIRECT_LIMIT = ""
 YTDLP_LIMIT = ""
 GDRIVE_LIMIT = ""
-MEGA_LIMIT = ""
+MEGA_LIMIT = "5"
 LEECH_LIMIT = ""
 CLONE_LIMIT = ""
 
 #Group Features
-FSUB_IDS = ""
-USER_MAX_TASKS = ""
+FSUB_IDS = "-1001795463167"
+USER_MAX_TASKS = "10"
 ENABLE_RATE_LIMIT = ""
 ENABLE_MESSAGE_FILTER = ""
-STOP_DUPLICATE_TASKS = ""
+STOP_DUPLICATE_TASKS = "true"
 DISABLE_DRIVE_LINK = ""
 
 #Extra
 SET_COMMANDS = ""
 DISABLE_LEECH = ""
-DM_MODE = ""
-DELETE_LINKS = ""
-LOG_CHAT = ""
+DM_MODE = "all"
+DELETE_LINKS = "true"
+LOG_CHAT = "-1001837364361"
